# bank-backend-rust

./: Cargo.toml  README.md
.github/workflows/: bank-backend-rust.yml
src/: customer.rs  main.rs  tests.rs
