[package]
name = "bank-backend-rust"
version = "1.0.0"
authors = ["Olof Nord <olof.nord@tutanota.com>"]
edition = "2018"
description = "Backend part of Fake Bank project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]